--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 PORT=8081
+MONGODB_CNN=mongodb+srv://user_node_cafe:hptMLLbKkVIwK6HB@miclustercafe.6vcdjyv.mongodb.net/cafeDB
+USER=user_node_cafe
+PASS=hptMLLbKkVIwK6HB
