--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ MONGODB_CNN=mongodb+srv://user_node_cafe:hptMLLbKkVIwK6HB@miclustercafe.6vcdjyv.
 USER=user_node_cafe
 PASS=hptMLLbKkVIwK6HB
 SECRET=MiScreto@ASD
+GOOGLE_CLIENT_ID=508478971594-ohl1ge7uqk0fdgoc02ljn87ep3qs5eo0.apps.googleusercontent.com
+GOOGLE_SECRET_ID=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
